<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="projects.udacity.portfolio.AppPortfolio">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top_title"
            android:textSize="@dimen/title_text_size"
            android:id="@+id/textView" />

        <Button
            style="@style/CustomButtonStyle"
            android:text="@string/popular_movies"
            android:id="@+id/button_popular_movies" />

        <Button
            style="@style/CustomButtonStyle"
            android:text="@string/stock_hawk"
            android:id="@+id/stock_hawk"
            android:layout_below="@+id/button_popular_movies" />

        <Button
            style="@style/CustomButtonStyle"
            android:text="@string/built_it_bigger"
            android:id="@+id/build_it_bigger"
            android:layout_below="@+id/stock_hawk" />

        <Button
            style="@style/CustomButtonStyle"
            android:text="@string/make_material"
            android:id="@+id/app_material"
            android:layout_below="@+id/build_it_bigger" />

        <Button
            style="@style/CustomButtonStyle"
            android:text="@string/go_ubi"
            android:id="@+id/go_ubiquitous"
            android:layout_below="@+id/app_material" />

        <Button
            style="@style/CustomButtonStyle"
            android:text="@string/capstone"
            android:id="@+id/capstone"
            android:layout_below="@+id/go_ubiquitous"/>
    </RelativeLayout>
</ScrollView>